pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference20.pkl
import "pkl:ref"

class A {
  foo: String | Int | Boolean
}

class D extends ref.Domain {
  function renderReference(reference: ref.Reference<D, Any>): String = throw("not supported")
}
local d: D = new {}

local test = ref.Reference(d, A, "").foo
testInterpolation = "test:\(test)"

// this tests that the interpolation appears in the output when referenceToString throws
